--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+=== 0.2.3 / 2010/11/17
+
+* Updated for v4 methods.
+
 === 0.2.2 / 2010/10/18
 
 * Allow specifying the read_timeout to pass through to Net::HTTP.
